--- a/source/_data/head.njk
+++ b/source/_data/head.njk
@@ -1,15 +1,3 @@
-<!-- Matomo -->
-<script type="text/javascript">
-  var _paq = window._paq = window._paq || [];
-  /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
-  _paq.push(['trackPageView']);
-  _paq.push(['enableLinkTracking']);
-  (function() {
-    var u="//121.41.105.205/";
-    _paq.push(['setTrackerUrl', u+'matomo.php']);
-    _paq.push(['setSiteId', '1']);
-    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
-    g.type='text/javascript'; g.async=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
-  })();
-</script>
-<!-- End Matomo Code -->
+<script src="https://cmp.osano.com/6oZlTSKG6Nqsr5P/fb2a678a-699f-4e65-80ae-2c6b6c9b5fd7/osano.js"></script>
+
+<script data-ad-client="ca-pub-1481049907514266" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
